modif css et php

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 .defaultDay {
     color: #808080;
-    font-family: arial;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: lighter;
     font-size: 0.9vw;
     background-color: "#FFFFFF";
